k8s/raygun-backend.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "raygun-backend"
  namespace: "default"
  labels:
    app: "raygun-backend"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "raygun-backend"
  template:
    metadata:
      labels:
        app: "raygun-backend"
    spec:
      containers:
      - name: "${CONTAINER_NAME}"
        image: "${CONTAINER_IMAGE}"
        imagePullPolicy: Always
